added getReceiverdetail route,addBalance
