# lib/module/v1/customerAccount/customerAccountRoute.js
@@ -135,4 +135,50 @@ router
       resHndlr.sendError(res, err, req);
     });
 });
+
+
+router
+.route("/getReceiverDetails")
+.get([middleware.authenticate.autntctTkn , validators.validateReceiverDetails], function (req, res) {
+
+  let {userId , userType} = req.user
+  let { receiverAccountNumber } = req.query;
+ 
+  customerAccountFacade
+    .getReceiverDetails({
+      receiverAccountNumber,
+      userType,
+      userId
+    })
+    .then(function (result) {
+      resHndlr.sendSuccess(res, result, req);
+    })
+    .catch(function (err) {
+      resHndlr.sendError(res, err, req);
+    });
+});
+
+router
+.route("/addBalance")
+.post([middleware.authenticate.autntctTkn , validators.validateBeneficiaryDetails], function (req, res) {
+
+  let {userId , userType} = req.user
+  let { beneficiaryAccountNumber , amount } = req.query;
+ 
+  customerAccountFacade
+    .addBalance({
+      beneficiaryAccountNumber,
+      userType,
+      userId,
+      amount
+    })
+    .then(function (result) {
+      resHndlr.sendSuccess(res, result, req);
+    })
+    .catch(function (err) {
+      resHndlr.sendError(res, err, req);
+    });
+});
+
+
 module.exports = router;
