# lib/module/v1/customerAccount/customerAccountValidator.js
@@ -40,6 +40,50 @@ let errors=[]
     next();
 };
 
+var validateReceiverDetails = function (req, res, next) {
+    let errors=[]
+    let {
+        receiverAccountNumber} = req.query;
+        if(!receiverAccountNumber){
+            errors.push({ fieldName: "receiverAccountNumber", message: constant.MESSAGES.KEY_CANT_EMPTY.replace("{{key}}", "receiverAccountNumber") });
+        }
+        
+        if (receiverAccountNumber.match(/^[0-9]+$/) == null) {
+            errors.push({ fieldName: "receiverAccountNumber", message: constant.MESSAGES.KEY_SHOULD_BE_INTEGER.replace("{{key}}", "receiverAccountNumber") });
+        }
+      
+
+    if (errors && errors.length > 0) {
+        validationError(errors, next);
+    }
+    next();
+};
+
+var validateBeneficiaryDetails = function (req, res, next) {
+    let errors=[]
+   
+    let {
+        beneficiaryAccountNumber ,amount} = req.query;
+   
+        if(!amount){
+           
+            errors.push({ fieldName: "amount", message: constant.MESSAGES.KEY_CANT_EMPTY.replace("{{key}}", "amount") });
+        }
+       
+        if(!beneficiaryAccountNumber){
+            errors.push({ fieldName: "beneficiaryAccountNumber", message: constant.MESSAGES.KEY_CANT_EMPTY.replace("{{key}}", "beneficiaryAccountNumber") });
+        }
+        
+        if (beneficiaryAccountNumber.match(/^[0-9]+$/) == null) {
+            errors.push({ fieldName: "beneficiaryAccountNumber", message: constant.MESSAGES.KEY_SHOULD_BE_INTEGER.replace("{{key}}", "beneficiaryAccountNumber") });
+        }
+      
+
+    if (errors && errors.length > 0) {
+        validationError(errors, next);
+    }
+    next();
+};
 
 var validationError = function (errors, next) {
     if (errors && errors.length > 0) {
@@ -50,6 +94,8 @@ var validationError = function (errors, next) {
 
 module.exports = {
     validateCustomerAccCreate,
+    validateReceiverDetails,
+    validateBeneficiaryDetails
    
 };
 //========================== Export module end ==================================
