# lib/module/v1/fedoraService/serviceModel.js
@@ -8,7 +8,11 @@ const ServicesSchema = new Schema({
         type: String,
         index: true
     },
-    discription : {
+    serviceName :{
+        type: String,
+        default : ''
+    },
+    description : {
         type: String,
         default : ''
     },
