# lib/module/v1/onlineServices/onlineServiceModel.js
@@ -6,10 +6,10 @@ var Schema = mongoose.Schema;
 var Account;
 
 var OnlineServiceSchema = new Schema({
-    serviceApplyFor: {
-        type: Number, // 1- new account opening , 2- apply for loan , 3- apply for locker
-        index: true,
-        default:0
+    serviceId: {
+        type: Schema.Types.ObjectId,
+        ref: constants.DB_MODEL_REF.SERVICE,
+        default:null
     },
     remark :{
         type: String,
