# lib/module/v1/onlineServices/onlineServiceValidators.js
@@ -19,7 +19,7 @@ var ObjectId = require('mongoose').Types.ObjectId;
 var validateEditDetails = function (req, res, next) {
 let errors=[]
     let { 
-        serviceApplyFor,
+        serviceId,
         remark,
         status,
         reply,
@@ -30,21 +30,42 @@ let errors=[]
      } = req.body;
      console.log(req.body,"req.body")
 
-     if (!ObjectId.isValid(accountId))  {
-        errors.push({ field: "accountId", message: "Enter valid object Id " });
+     if (accountId && !ObjectId.isValid(accountId))  {
+        errors.push({ field: "accountId", message: "Enter valid accountId Id " });
     }
-    if (!customerId.match(/^[0-9a-fA-F]{24}$/)) {
+    // .match(/^[0-9a-fA-F]{24}$/)
+    if (customerId && !ObjectId.isValid(customerId)) {
         errors.push({ field: "customerId", message: "Enter valid customerId " });
     }
     if(!onlineServiceId){
-        errors.push({ field: "onlineServiceId", message: "EnteronlineServiceId " });
+        errors.push({ field: "onlineServiceId", message: "Enter onlineServiceId " });
     }
     if (errors && errors.length > 0) {
         validationError(errors, next);
     }
+    
     next();
 };
 
+
+let validateApplyService = function (req, res, next) {
+    let errors = [];
+    let { serviceId, remark ,accountType} = req.body;
+
+
+    if (!serviceId) {
+        errors.push({ field: "serviceId", message: "Enter serviceId " });
+    }
+ 
+    if (!ObjectId.isValid(serviceId))  {
+        errors.push({ field: "serviceId", message: "Enter valid object Id " });
+    }
+    if (errors && errors.length > 0) {
+        validationError(errors, next);
+    }
+  
+    next();
+}
 
 var validationError = function (errors, next) {
     if (errors && errors.length > 0) {
@@ -55,6 +76,7 @@ var validationError = function (errors, next) {
 
 module.exports = {
     validateEditDetails,
+    validateApplyService
    
 };
 //========================== Export module end ==================================
